--- a/src/components/nav_elements/navbar.css
+++ b/src/components/nav_elements/navbar.css
@@ -7,21 +7,41 @@ justify-content: center;
 align-items: baseline;
 padding: 1em;
 margin-bottom: 2em;
-background-color: rgb(192, 45, 26);
+padding-left: 0px;
+padding-right: 0px;
+background-color: #c42f43;
 color: #fff
 }
+
+.nav-title h1 {
+    font-family: Chalkduster, fantasy 
+}
+
 .nav-title {
     display: flex;
     flex-direction: row;
     align-items: center
 }
-.title-sub {
-   flex-wrap: wrap
-}
 
 .title-img {
     width: 5em
 }
+
+.navbar-jump {
+    width: 100%;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+.navbar-jump ul {
+    border-top: 0.5em solid #fff;
+/*    background-image: linear-gradient(to bottom, #fff, #c42f43 60%);*/
+    border-color: #871e2c;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    list-style-type: none
+}
+
 @media (prefers-reduced-motion: no-preference) {
 .title-img {
     animation: logo-spin infinite 20s linear;
@@ -36,3 +56,4 @@ color: #fff
 	transform: rotate(360deg);
     }
 }
+
