--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 .App {
   text-align: center;
-  position: absolute;
   width: 100%;
   height: 100%;
-  top:0; left:0; right:0;
-  z-index: 8;
+/*  top:0; left:0; right:0;
+  z-index: 8;*/
 }
 
 .App-logo {
