--- a/src/components/nav_elements/navbar.css
+++ b/src/components/nav_elements/navbar.css
@@ -12,7 +12,7 @@ color: #fff
 .nav-title {
     padding: 1em;
     width: 100%;
-background-color: #c42f43;
+background-color: #333333;
 }
 .nav-title h2 {
     font-family: Chalkduster, fantasy 
@@ -35,9 +35,9 @@ background-color: #c42f43;
 }
 .navbar-jump ul {
     margin: 0em;
-    border-top: 0.5em solid #871e2c;
+    border-top: 0.5em solid #1e1f24;
 /*    background-image: linear-gradient(to bottom, #fff, #c42f43 60%);*/
-    background-color: #871e2c;
+    background-color: #171717;
     width: 100%;
     display: flex;
     flex-direction: row;
