--- a/src/pages/meteor.css
+++ b/src/pages/meteor.css
@@ -1,7 +1,7 @@
 .default-background {
     width: 100%;
     height: 100em;
-    background: linear-gradient(-45deg, #ff0f33, #ffa96b, #ba111f, #ffe77a);
+    background: linear-gradient(-45deg, #002a59, #002045, #001d3d, #003878);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 
