--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -15,109 +15,49 @@
     
 }
  
+
+
 .home-horizontal-container {
-    margin: 2em;
-    padding: 2em;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-     grid-template-columns: 1fr;
-    width: 40%;
-    border: 0.5em solid #ababab;
-    border-radius: 2.5em;
-    border-color: transparent;
-    overflow: hidden;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-
-.home-animation-wrapper {
-    width: 100%;
-  height: 100%;
-grid-row-start: 1;
- grid-column-start: 1;
-    animation: o-rotate-360 linear 16s infinite;
-  }
-
-.home-animation-wrapper span {
-  display: block;
-  width: 100%;
-  height: 150%;
-  position: relative;
-  transform: translate(-50%, -50%);
-}
-
-.home-animation-wrapper span:after {
-  display: block;
-  content: "";
-  width: 100%;
-  height: 150%;
-  position: absolute;
-  left: 100%;
-}
-
-.home-animation-wrapper span:first-child {
-    background: #454545;
-}
-
-.home-animation-wrapper span:first-child:after {
-  background: #b8b8b8;
-}
-
-.home-animation-wrapper span:last-child {
-  background: #141414;
-}
-.home-animation-wrapper span:last-child:after {
-  background: #383838;
-}
-
-@-webkit-keyframes o-rotate-360 {
-  0% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes o-rotate-360 {
-  0% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.home-horizontal-element-container {
-    z-index: 10;
     display: flex;
     overflow: hidden;
-    width: 100%;
-    height: 100%;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    grid-row-start: 1;
-    grid-column-start: 1;
     background-color: #1e1f24;
-    border-radius: 1.8em;
-    padding: 1.7em; 
 }
-.home-bio {
-    width: 50%;
-    margin-bottom: 5.3em;
+
+
+.home-bio-container {
+    display: flex;
+    flex-direction: row;
+}
+
+
+.home-bio-spinning-container {
+    width: 50%
 }
 
 .home-bio-image {
-    max-height: 15em;
+    height:auto;
     width: auto;
-    height: auto;
+    max-height: 15em;
 }
- 
 
+
+.home-horizontal-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+
+.home-fast-link-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.home-fast-link-container h3 {
+    margin-bottom: 1em;
+}
 
 
 
