added a fix for a well known safari bug regarding overflow hidden, changed index page to reflex website name

--- a/src/components/spinning_border.css
+++ b/src/components/spinning_border.css
@@ -1,4 +1,6 @@
 .spinning-border-outside-container {
+    /* apparently safari refuse to fix it */
+    mask-image: radial-gradient(white, black);
     margin: 2em;
     padding: 2em;
     display: grid;
