--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -14,11 +14,9 @@
     font-family: Luminari, fantasy;
 
     border-left: 10px solid #ccc;
-    margin: 1.5em 10px;
+    margin: 1.0em 10px;
     padding: 0.5em 10px;
 
-    margin-left: 10em;
-    margin-right: 10em;
     margin-top: 3em;
     display: flex;
     flex-direction: column;
@@ -31,7 +29,8 @@
 .home-title-container:before {
   color: #ccc;
   content: open-quote;
-  font-size: 4em;
+  /*this is inline styled in the js file, TODO: make it less bad*/
+/*  font-size: 4em; */
   line-height: 0.1em;
   margin-right: 0.25em;
   vertical-align: -0.4em;
